# deep-learning-samples

./: .gitignore  finetune.ipynb  helpers.py  inference.ipynb  pyproject.toml
finetuning/: finetune.ipynb
ml-in-numpy/: kmeans.ipynb  knn.ipynb
vae/: cvae.ipynb  cvae_visualizer.py  vae.ipynb  vae_visualizer.py
