[tool.poetry]
name = "mle"
version = "0.1.0"
description = ""
authors = ["kaushu42 <kaushu42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = {extras = ["torch"], version = "^4.48.1"}
datasets = "^3.2.0"
torch = "^2.5.1"
scikit-learn = "^1.6.1"
accelerate = ">=0.26.0"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"
onnxruntime-tools = "^1.7.0"
optimum = "^1.23.3"
peft = "^0.14.0"
matplotlib = "^3.10.0"
xgboost = "^2.1.3"
torchvision = "^0.21.0"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
